# factor-adder-tree-walker

./: CHANGELOG.md  LICENSE  factor-adder-tree-walker.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: factor-adder-tree-walker-0.1.0.0-inplace.conf  package.cache
src/: MyLib.hs
test/: Tests.hs
