cabal-version:      3.4
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.

name:               factor-adder-tree-walker

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:
    Brute force search for exceptions to https://www.youtube.com/watch?v=pylw9t4j6bM

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Mako Bates

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         33739499+ShapeOfMatter@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Math
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings
    -- Modules exported by the library.
    exposed-modules:  MyLib
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1
                    , arithmoi ^>=0.13.0.0
    -- Directories containing source files.
    hs-source-dirs:   src
    -- Base language which the package is written in.
    default-language: GHC2021

executable factor-adder-tree-walker
    import:           warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.1,
        factor-adder-tree-walker
    hs-source-dirs:   app
    default-language: GHC2021

test-suite factor-adder-tree-walker-test
    import:           warnings
    default-language: GHC2021
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- The interface type and version of the test suite.
    type:             detailed-0.9
    -- Directories containing source files.
    hs-source-dirs:   test
    -- The entrypoint to the test suite.
    test-module:      Tests
    -- Test dependencies.
    build-depends:    base ^>=4.17.2.1
                    , arithmoi ^>=0.13.0.0
                    , Cabal
                    , cabal-detailed-quickcheck
                    , factor-adder-tree-walker
                    , QuickCheck >= 2.14 && < 3

